# foirehdf

./: .gitignore  Dockerfile  README.md  app.py  change_gettext_fields.py  convert_translations.py  docker-compose.yml  fair_db.json  main.py  manufacturer_desc.txt  mypy.ini  nohup.out  pyproject.toml  requirements.txt  retrieve_gettext_fields.py  ruff.toml  sapp.py  wapp.py
backend/: __init__.py
backend/dto/: attraction_dto.py  error_dto.py  fair_dto.py  list_dto.py  manufacturer_dto.py  paginated_list_dto.py  response_dto.py  success_dto.py
backend/endpoints/: attractionsEndpoint.py  fairEndpoint.py  locationEndpoint.py  manufacturerEndpoint.py
backend/models/: annotated.py  attractionModel.py  attraction_model.py  fairModel.py  fair_model.py  locationModel.py  location_model.py  manufacturerModel.py  manufacturer_model.py  ride_model.py  timeline_model.py
backend/services/: attractionService.py  (+8 more)
components/: display_attraction_in_list.py  display_ride_in_list.py  fair_timeline.py  image_loader.py
frontend/: const.py  fair_create.py  fair_edit.py  fair_list.py  fair_view.py  ride_box.py  ride_create.py  ride_list.py  ride_view.py  view_fair.py
pages/: __init__.py  fair_create.py  fair_edit.py  fair_list.py  fair_view.py  form_input.py  location_list.py  manufacturer_list.py  ride_create.py  ride_edit.py  ride_list.py  ride_view.py
static/: styles.css
statics/: s.py
templates/: base.html  fair_create.html  fair_list.html  fair_view.html  fait_edit.html  locations.html  manufacturer_list.html  navbar.html  ride_create.html  ride_list.html  ride_view.html
(+10 files in other folders)
