[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "jinja2>=3.1.6",
    "mypy>=1.16.1",
    "polib>=1.2.0",
    "pydantic>=2.11.3",
    "python-gettext>=5.0",
    "ruff>=0.12.1",
    "streamlit>=1.44.1",
    "streamlit-card>=1.0.2",
    "tinydb>=4.8.2",
    "tornado>=6.4.2",
]
